Ensure title covers half the page

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ h1 {
 	position: absolute;
 	left: 0;
 	bottom: 0;
+	width: 50%;
 	background-color: #000;
 }
 
